Estructura basica para el parcial

--- a/Parcial_1/index.html
+++ b/Parcial_1/index.html
@@ -1,20 +1,46 @@
 <!DOCTYPE html>
-<html lang="es_col">
+<html lang = "es">
     <head>
         <meta charset="UTF-8" />
         <meta name = "author" content = "Daniel Perez Gallego">
         <meta name = "description" content = "Parcial 1">
         <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
         <title> Parcial 1</title>
-        <link rel= "stylesheet" href = "styles/styles.css"/>
-        <link rel = "icon" href= "WhatsApp Image 2024-09-17 at 7.52.22 PM.jpeg"/>
-        
+        <link rel= "stylesheet" href = "resources/style.css"/>
+        <link rel = "icon" href= "resources/logo_1.jpeg"/>
+
+
     </head>
     <body>
-        <section>
-            <article>
+        <header>
+            <h1>Mi pagina :3</h1>
+            <nav>
+                <ul>
+                <li><a href=>Inicio</a></li>
+                <li><a href=>Pagina 2</a></li>
+                <li>Pagina 3</li>
+                    <ol>
+                    <li>Elemento 1</li>
+                    <li>Elemento 2</li>
+                </ul>
+            </nav>
+        </header>
 
-            </article>
-        </section>
+
+    <section id="content">
+        <article class="article">
+            <h2>Introduccion</h2>
+            <p>Texto</p>
+        </article>
+
+        <article class="article">
+            <h2>Desarrollo</h2>
+            <p>Texto</p>
+        </article>
+    </section>
+
     </body>
+    <footer>
+        <p>Daniel Perez Gallego <em>2024</em> &reg;</p>
+    </footer>
 </html>
