Se añaden imagenes, logo, cuadros

--- a/Parcial_1/index.html
+++ b/Parcial_1/index.html
@@ -7,7 +7,7 @@
         <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
         <title> Parcial 1</title>
         <link rel= "stylesheet" href = "resources/style.css"/>
-        <link rel = "icon" href= "resources/logo_1.jpeg"/>
+        <link rel = "icon" href= "resources/heartblack-icon.png"/>
 
 
     </head>
@@ -25,35 +25,26 @@
         </nav>
 
 
-    <section id="content">
-        <article class="article">
-            <h2>Introduccion</h2>
-            <p>Texto</p>
-        </article>
+    <div class="content"></div>
+        <div class="centrar">
+            <div class="cuadros">
 
-        <article class="article">
-            <h2>Desarrollo</h2>
-            <p>Texto</p>
-        </article>
-    </section>
+                <section class="html_content">
+                    <h3>HTML</h3>
+                    <p class="text">Lenguaje de marcado con el que declaramos la estructura de una página web. Consiste de elementos anidados y cada elemento tiene unos atributos que permiten modificar su comportamiento.</p>
+                    <div class="logocontent">
+                        <img class="logo" src="logos/icon-supervisor.svg">
+                    </div>
 
-
-    <section class="content">
-        <div class="box">
-            <h3>HTML</h3>
-            <p>Lenguaje de marcado con el que declaramos la estructura de una página web. Consiste de elementos anidados y cada elemento tiene unos atributos que permiten modificar su comportamiento.</p>
-            <img src="html-logo.png" alt="HTML Logo">
+                </section>
+            </div>
         </div>
+    </div>
     </section>
 
 
 
-    <aside>
-        <ul>
-            <li>uno</li>
-            <li>dos</li>
-        </ul>
-    </aside>
+
 
     </body>
     <footer>
