--- a/Parcial_1/pages/HTML.html
+++ b/Parcial_1/pages/HTML.html
@@ -6,7 +6,7 @@
         <meta name = "description" content = "Parcial 1">
         <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
         <title> Parcial 1</title>
-        <link rel= "stylesheet" href = "resources/style.css"/>
+        <link rel= "stylesheet" href = "/resources/HTML.css"/>
         <link rel = "icon" href= "resources/logo_1.jpeg"/>
 
 
@@ -15,6 +15,7 @@
         <header>
             <h1>Primer Parcial Desarrollo De Aplicaciones Web (Par)</h1>
         </header>
+    <head>
 
         <nav>
             <ul>
@@ -26,15 +27,18 @@
             </ul>
         </nav>
 
+        <section class="content">
+            <div class="box">
+                <h3>HTML</h3>
+                <p>Lenguaje de marcado con el que declaramos la estructura de una página web. Consiste de elementos anidados y cada elemento tiene unos atributos que permiten modificar su comportamiento.</p>
+                <img src="html-logo.png">
+            </div>
+        </section>
 
-    <section id="content">
-        <article class="article">
-            <h2>Introduccion</h2>
-            <p>Texto</p>
-        </article>
-
-        <article class="article">
-            <h2>Desarrollo</h2>
-            <p>Texto</p>
-        </article>
-    </section>
+    </body>
+    <footer>
+        <p>Desarrollado Por: Daniel Perez Gallego</p>
+        <p>Universidad De Antioquia</p>
+        <p>2024-2</p>
+    </footer>
+</html>
