--- a/Parcial_1/index.html
+++ b/Parcial_1/index.html
@@ -25,31 +25,62 @@
         </nav>
 
 
+
+
     <div class="content"></div>
         <div class="centrar">
             <div class="cuadros">
 
                 <section class="html_content">
-                    <h3>HTML</h3>
+                    <h3>HTML</h3> 
                     <p class="text">Lenguaje de marcado con el que declaramos la estructura de una página web. Consiste de elementos anidados y cada elemento tiene unos atributos que permiten modificar su comportamiento.</p>
                     <div class="logocontent">
-                        <img class="logo" src="logos/icon-supervisor.svg">
+                        <img class="logocontent" src="resources/64px-HTML5_logo_resized.svg.png">
                     </div>
-
                 </section>
+
+
+                <div class="vertical">
+
+                    <section class="dns_content">
+                        <h3>DNS</h3>
+                        <p class="text">Nos permite hablar con los servidores en internet sin necesidad de aprendernos sus direcciones IP..</p>
+                        <div class="logocontent">
+                            <img class="logocontent" src="resources/DNS_logo.png">
+                        </div>
+
+                    </section>
+
+                    <section class="css_content">
+                        <h3>CSS</h3>
+                        <p class="text">Es un lenguaje de estilos que nos permite definir cómo queremos que se vea nuestra página. CSS se encarga de definir cómo debe ser renderizado el elemento estructurado en la pantalla.</p>
+                        <div class="logocontent">
+                            <img class="logocontent" src="resources/64px-HTML5_logo_resized.svg.png"">
+                        </div>
+
+                    </section>
+
+                </div>
+
+                <section class="tcp_ip_content">
+                    <h3>TCP/IP</h3>
+                    <p class="text">TCP/IP (Transmission Control Protocol/Internet Protocol) es un conjunto de protocolos de red que permiten la comunicación entre dispositivos informáticos, incluyendo ordenadores y otros dispositivos, en una red o entre redes, incluyendo la Internet.</p>
+                    <div class="logocontent">
+                        <img class="logocontent" src="logos/icon-calculator.svg">
+                    </div>
+                </section>
+
             </div>
         </div>
     </div>
-    </section>
-
-
-
 
 
     </body>
     <footer>
-        <p>Desarrollado Por: Daniel Perez Gallego</p>
+        <p>Desarrollado Por: <strong>Daniel Perez Gallego</strong> </p>
         <p>Universidad De Antioquia</p>
         <p>2024-2</p>
     </footer>
 </html>
+
+
