Sombras, se ajustan errores y se agrega el ultimo logo

--- a/Parcial_1/index.html
+++ b/Parcial_1/index.html
@@ -31,31 +31,30 @@
         <div class="centrar">
             <div class="cuadros">
 
-                <section class="html_content">
-                    <h3>HTML</h3> 
-                    <p class="text">Lenguaje de marcado con el que declaramos la estructura de una página web. Consiste de elementos anidados y cada elemento tiene unos atributos que permiten modificar su comportamiento.</p>
+                <section class="dns_content">
+                    <h3>DNS</h3> 
+                    <p class="text">Nos permite hablar con los servidores en internet sin necesidad de aprendernos sus direcciones IP.</p>
                     <div class="logocontent">
-                        <img class="logocontent" src="resources/64px-HTML5_logo_resized.svg.png">
+                        <img class="logo" src="resources/DNS_logo.png">
+
                     </div>
                 </section>
 
 
                 <div class="vertical">
-
-                    <section class="dns_content">
-                        <h3>DNS</h3>
-                        <p class="text">Nos permite hablar con los servidores en internet sin necesidad de aprendernos sus direcciones IP..</p>
+                    <section class="html_content">
+                        <h3>HTML</h3>
+                        <p class="text">Lenguaje de marcado con el que declaramos la estructura de una página web. Consiste de elementos anidados y cada elemento tiene unos atributos que permiten modificar su comportamiento.</p>
                         <div class="logocontent">
-                            <img class="logocontent" src="resources/DNS_logo.png">
+                            <img class="logo" src="resources/64px-HTML5_logo_resized.svg.png">
                         </div>
-
                     </section>
 
                     <section class="css_content">
                         <h3>CSS</h3>
                         <p class="text">Es un lenguaje de estilos que nos permite definir cómo queremos que se vea nuestra página. CSS se encarga de definir cómo debe ser renderizado el elemento estructurado en la pantalla.</p>
                         <div class="logocontent">
-                            <img class="logocontent" src="resources/64px-HTML5_logo_resized.svg.png"">
+                            <img class="logo" src="resources/64px-HTML5_logo_resized.svg.png">
                         </div>
 
                     </section>
@@ -66,7 +65,7 @@
                     <h3>TCP/IP</h3>
                     <p class="text">TCP/IP (Transmission Control Protocol/Internet Protocol) es un conjunto de protocolos de red que permiten la comunicación entre dispositivos informáticos, incluyendo ordenadores y otros dispositivos, en una red o entre redes, incluyendo la Internet.</p>
                     <div class="logocontent">
-                        <img class="logocontent" src="logos/icon-calculator.svg">
+                        <img class="logo" src="resources/Aha-Soft-Free-Global-Security-Global-Network.512.png">
                     </div>
                 </section>
 
