--- a/Parcial_1/index.html
+++ b/Parcial_1/index.html
@@ -7,7 +7,7 @@
         <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
         <title> Parcial 1</title>
         <link rel= "stylesheet" href = "resources/style.css"/>
-        <link rel = "icon" href= "resources/heartblack-icon.png"/>
+        <link rel = "icon" href= "resources//img/heartblack-icon.png"/>
 
 
     </head>
@@ -15,6 +15,8 @@
         <header>
             <h1>Primer Parcial Desarrollo De Aplicaciones Web (Par)</h1>
         </header>
+        <h2>HTML + CSS</h2>
+
 
         <nav>
             <ul>
@@ -35,7 +37,7 @@
                     <h3>DNS</h3> 
                     <p class="text">Nos permite hablar con los servidores en internet sin necesidad de aprendernos sus direcciones IP.</p>
                     <div class="logocontent">
-                        <img class="logo" src="resources/DNS_logo.png">
+                        <img class="logo" src="resources/img/DNS_logo.png">
 
                     </div>
                 </section>
@@ -46,7 +48,7 @@
                         <h3>HTML</h3>
                         <p class="text">Lenguaje de marcado con el que declaramos la estructura de una página web. Consiste de elementos anidados y cada elemento tiene unos atributos que permiten modificar su comportamiento.</p>
                         <div class="logocontent">
-                            <img class="logo" src="resources/64px-HTML5_logo_resized.svg.png">
+                            <img class="logo" src="resources/img/64px-HTML5_logo_resized.svg.png">
                         </div>
                     </section>
 
@@ -54,7 +56,7 @@
                         <h3>CSS</h3>
                         <p class="text">Es un lenguaje de estilos que nos permite definir cómo queremos que se vea nuestra página. CSS se encarga de definir cómo debe ser renderizado el elemento estructurado en la pantalla.</p>
                         <div class="logocontent">
-                            <img class="logo" src="resources/64px-HTML5_logo_resized.svg.png">
+                            <img class="logo" src="resources/img/css_imgg.png">
                         </div>
 
                     </section>
@@ -65,7 +67,7 @@
                     <h3>TCP/IP</h3>
                     <p class="text">TCP/IP (Transmission Control Protocol/Internet Protocol) es un conjunto de protocolos de red que permiten la comunicación entre dispositivos informáticos, incluyendo ordenadores y otros dispositivos, en una red o entre redes, incluyendo la Internet.</p>
                     <div class="logocontent">
-                        <img class="logo" src="resources/Aha-Soft-Free-Global-Security-Global-Network.512.png">
+                        <img class="logo" src="resources/img/Aha-Soft-Free-Global-Security-Global-Network.512.png">
                     </div>
                 </section>
 
