--- a/Parcial_1/pages/HTML.html
+++ b/Parcial_1/pages/HTML.html
@@ -6,8 +6,8 @@
         <meta name = "description" content = "Parcial 1">
         <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
         <title> Parcial 1</title>
-        <link rel= "stylesheet" href = "/resources/HTML.css"/>
-        <link rel = "icon" href= "resources/logo_1.jpeg"/>
+        <link rel= "stylesheet" href = "resources/style.css"/>
+        <link rel = "icon" href= "resources//img/heartblack-icon.png"/>
 
 
     </head>
@@ -15,15 +15,14 @@
         <header>
             <h1>Primer Parcial Desarrollo De Aplicaciones Web (Par)</h1>
         </header>
-    <head>
+        <h2>HTML + CSS</h2>
+
 
         <nav>
             <ul>
-                <li><a href="/index.html">INICIO</a></li>
-                <li><a href="/pages/HTML.html">HTML</a></li>
                 <li><a href="/pages/CSS.html">CSS</a></li>
-
-
+                <li><a href="/pages/HTML.html">HTML</a></li>
+                <li><a href="/index.html">INICIO</a></li>
             </ul>
         </nav>
 
