Avance en paginas CSS y HTML

--- a/Parcial_1/pages/HTML.html
+++ b/Parcial_1/pages/HTML.html
@@ -6,7 +6,7 @@
         <meta name = "description" content = "Parcial 1">
         <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
         <title> Parcial 1</title>
-        <link rel= "stylesheet" href = "resources/style.css"/>
+        <link rel= "stylesheet" href = "/resources/HTML.css"/>
         <link rel = "icon" href= "resources//img/heartblack-icon.png"/>
 
 
@@ -26,17 +26,18 @@
             </ul>
         </nav>
 
-        <section class="content">
-            <div class="box">
-                <h3>HTML</h3>
-                <p>Lenguaje de marcado con el que declaramos la estructura de una página web. Consiste de elementos anidados y cada elemento tiene unos atributos que permiten modificar su comportamiento.</p>
-                <img src="html-logo.png">
+
+        <section class="html_content">
+            <h3>HTML</h3>
+            <p class="text">Lenguaje de marcado con el que declaramos la estructura de una página web. Consiste de elementos anidados y cada elemento tiene unos atributos que permiten modificar su comportamiento.</p>
+            <div class="logocontent">
+                <img class="logo" src="resources/img/64px-HTML5_logo_resized.svg.png">
             </div>
         </section>
 
     </body>
     <footer>
-        <p>Desarrollado Por: Daniel Perez Gallego</p>
+        <p>Desarrollado Por: <strong>Daniel Perez Gallego</strong> </p>
         <p>Universidad De Antioquia</p>
         <p>2024-2</p>
     </footer>
