--- a/Parcial_1/pages/CSS.html
+++ b/Parcial_1/pages/CSS.html
@@ -6,7 +6,7 @@
         <meta name = "description" content = "Parcial 1">
         <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
         <title> Parcial 1</title>
-        <link rel= "stylesheet" href = "resources/style.css"/>
+        <link rel= "stylesheet" href = "/resources/CSS.css"/>
         <link rel = "icon" href= "resources//img/heartblack-icon.png"/>
 
 
@@ -25,3 +25,21 @@
                 <li><a href="/index.html">INICIO</a></li>
             </ul>
         </nav>
+
+        <section class="css_content">
+            <h3>CSS</h3>
+            <p class="text">Es un lenguaje de estilos que nos permite definir cómo queremos que se vea nuestra página. CSS se encarga de definir cómo debe ser renderizado el elemento estructurado en la pantalla.</p>
+            <div class="logocontent">
+                <img class="logo" src="resources/img/css_imgg.png">
+            </div>
+
+        </section>
+        
+    </body>
+
+    <footer>
+        <p>Desarrollado Por: <strong>Daniel Perez Gallego</strong> </p>
+        <p>Universidad De Antioquia</p>
+        <p>2024-2</p>
+    </footer>
+</html>
