Pagina HTML casi finalizada

--- a/Parcial_1/pages/CSS.html
+++ b/Parcial_1/pages/CSS.html
@@ -5,7 +5,7 @@
         <meta name = "author" content = "Daniel Perez Gallego">
         <meta name = "description" content = "Parcial 1">
         <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
-        <title> Parcial 1</title>
+        <title>CSS</title>
         <link rel= "stylesheet" href = "/resources/CSS.css"/>
         <link rel = "icon" href= "resources//img/heartblack-icon.png"/>
 
@@ -34,7 +34,7 @@
             </div>
 
         </section>
-        
+
     </body>
 
     <footer>
