--- a/Parcial_1/pages/HTML.html
+++ b/Parcial_1/pages/HTML.html
@@ -5,7 +5,7 @@
         <meta name = "author" content = "Daniel Perez Gallego">
         <meta name = "description" content = "Parcial 1">
         <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
-        <title> Parcial 1</title>
+        <title>HTML</title>
         <link rel= "stylesheet" href = "/resources/HTML.css"/>
         <link rel = "icon" href= "resources//img/heartblack-icon.png"/>
 
@@ -27,13 +27,20 @@
         </nav>
 
 
-        <section class="html_content">
-            <h3>HTML</h3>
-            <p class="text">Lenguaje de marcado con el que declaramos la estructura de una página web. Consiste de elementos anidados y cada elemento tiene unos atributos que permiten modificar su comportamiento.</p>
-            <div class="logocontent">
-                <img class="logo" src="resources/img/64px-HTML5_logo_resized.svg.png">
+        <div class="content"></div>
+        <div class="centrar">
+            <div class="cuadros">
+                <div class="vertical">
+                    <section class="html_content">
+                        <h3>HTML</h3>
+                        <p class="text">Lenguaje de marcado con el que declaramos la estructura de una página web. Consiste de elementos anidados y cada elemento tiene unos atributos que permiten modificar su comportamiento.</p>
+                        <div class="logocontent">
+                            <img class="logo" src="/resources/img/64px-HTML5_logo_resized.svg.png">
+                        </div>
+                    </section>
+                </div>
             </div>
-        </section>
+        </div>
 
     </body>
     <footer>
