Pagina CSS casi finalizada

--- a/Parcial_1/pages/CSS.html
+++ b/Parcial_1/pages/CSS.html
@@ -26,14 +26,20 @@
             </ul>
         </nav>
 
-        <section class="css_content">
-            <h3>CSS</h3>
-            <p class="text">Es un lenguaje de estilos que nos permite definir cómo queremos que se vea nuestra página. CSS se encarga de definir cómo debe ser renderizado el elemento estructurado en la pantalla.</p>
-            <div class="logocontent">
-                <img class="logo" src="resources/img/css_imgg.png">
+        <div class="content"></div>
+        <div class="centrar">
+            <div class="cuadros">
+                <div class="vertical">
+                    <section class="css_content">
+                        <h3>CSS</h3>
+                        <p class="text">Es un lenguaje de estilos que nos permite definir cómo queremos que se vea nuestra página. CSS se encarga de definir cómo debe ser renderizado el elemento estructurado en la pantalla.</p>
+                        <div class="logocontent">
+                            <img class="logo" src="/resources/img/css_logo.png">
+                        </div>
+                    </section>
+                </div>
             </div>
-
-        </section>
+        </div>
 
     </body>
 
