--- a/Parcial_1/index.html
+++ b/Parcial_1/index.html
@@ -56,7 +56,7 @@
                         <h3>CSS</h3>
                         <p class="text">Es un lenguaje de estilos que nos permite definir cómo queremos que se vea nuestra página. CSS se encarga de definir cómo debe ser renderizado el elemento estructurado en la pantalla.</p>
                         <div class="logocontent">
-                            <img class="logo" src="resources/img/css_imgg.png">
+                            <img class="logo" src="/resources/img/css_logo.png">
                         </div>
 
                     </section>
