--- a/Parcial_2/index.html
+++ b/Parcial_2/index.html
@@ -7,8 +7,30 @@
         <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
         <title> Parcial 2</title>
         <link rel= "stylesheet" href = "resources/styles.css"/>
-        <link rel = "icon" href= "resources//img/heartblack-icon.png"/>
-        <script src="script.js" defer></script>
-        <head>
+        <link rel = "icon" href= ""/>
+        <script src="main.js" defer></script>
+    <head>
+
+        <section id="element-list"></section>
+
+        <section>
+            <h2>Crear o Modificar Elemento</h2>
+            <form id="element-form">
+                <input type="hidden" id="element-id" />
+                <label for="first-name">Nombre:</label>
+                <input type="text" id="first-name" required>
+                <label for="last-name">Apellido:</label>
+                <input type="text" id="last-name" required>
+                <label for="phone">Teléfono:</label>
+                <input type="tel" id="phone" required>
+                <label for="email">Email:</label>
+                <input type="email" id="email" required>
+                <label for="job-title">Puesto de trabajo:</label>
+                <input type="text" id="job-title" required>
+                <button type="submit">Guardar</button>
+            </form>
+        </section>
+
+
 <html>
         
