--- a/Parcial_2/index.html
+++ b/Parcial_2/index.html
@@ -5,7 +5,7 @@
     <meta name="author" content="Daniel Perez Gallego" />
     <meta name="description" content="Parcial 2" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Parcial 2</title>
+    <title>Parcial 2 JS</title>
     <link rel="stylesheet" href="resources/styles.css" />
     <link rel="icon" href="" />
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
