--- a/Parcial_2/index.html
+++ b/Parcial_2/index.html
@@ -6,10 +6,11 @@
     <meta name="description" content="Parcial 2" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Parcial 2 JS</title>
-    <link rel="stylesheet" href="resources/styles.css" />
-    <link rel="icon" href="" />
+    <link rel="stylesheet" href="resources/styles/styles.css" />
+    <link rel="icon" href="resources/styles/heartblack-icon.png" />
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="main.js" defer></script>
+    <script type="module" src="main.js"></script>
+
 </head>
 <body>
     <h1>Lista de Usuarios</h1>
