Se agrega una barra lateral, titulo e información general de la ciudad

--- a/Proyecto_Final/Codigo/index.html
+++ b/Proyecto_Final/Codigo/index.html
@@ -5,13 +5,52 @@
     <meta name="author" content="Daniel Perez Gallego" />
     <meta name="description" content="Proyecto final" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Proyecto final</title>
+    <title>Guía de Eventos de Medellín</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel = "icon" href= ""/>
 
-</head>
+
 <body>
+    <header>
+        <h1>Guía de Eventos Culturales de Medellín</h1>
+        <p>Descubre los eventos más importantes de Medellín</p>
+    </header>
 
+    <nav>
+        <a href="/index.html">Inicio</a>
+        <a href="#">Eventos</a>
+        <a href="#">Calendario</a>
+        <a href="#">Contacto</a>
+    </nav>
+
+    <section>
+        <h2>Bienvenidos a Medellín</h2>
+        <p>
+            Medellín, conocida como la "Ciudad de la Eterna Primavera" por su clima templado y agradable, 
+            es la segunda ciudad más grande de Colombia y la capital del departamento de Antioquia. 
+            A lo largo de los siglos, se transformó en un próspero centro industrial y económico, 
+            convirtiéndose en una de las ciudades más hermosas y dinámicas de toda América Latina.
+        </p>
+
+        <p>
+            Uno de los aspectos más destacados de Medellín es su riqueza cultural. La ciudad es un punto 
+            de encuentro para diversas expresiones artísticas y culturales, que reflejan la identidad paisa 
+            las costumbres antioqueñas están impregnadas de tradiciones rurales, pero Medellín ha sabido 
+            fusionar estas raíces con una mentalidad innovadora y moderna. Esto se manifiesta en la 
+            vibrante vida artística, los museos de la ciudad, su arquitectura contemporánea, y las 
+            expresiones culturales que llenan sus calles y plazas.
+        </p>
+
+    </section>
+
+    <footer>
+        <p>&copy; 2024 Guía de Eventos Culturales de Medellín | Todos los derechos reservados</p>
+        <p>Desarrollado Por: <strong>Daniel Perez Gallego</strong> </p>
+        <p>Universidad De Antioquia</p>
+        <p>2024-2</p>
+    </footer>
 </body>
-
 </html>
+
 
 
