Se agregan estilos CSS e imagenes

--- a/Proyecto_Final/Codigo/index.html
+++ b/Proyecto_Final/Codigo/index.html
@@ -5,9 +5,9 @@
     <meta name="author" content="Daniel Perez Gallego" />
     <meta name="description" content="Proyecto final" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Guía de Eventos de Medellín</title>
+    <title>Guía Eventos de Medellín</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel = "icon" href= ""/>
+    <link rel = "icon" href= "resources/logoA.png"/>
 
 
 <body>
