--- a/Proyecto_Final/Codigo/index.html
+++ b/Proyecto_Final/Codigo/index.html
@@ -17,10 +17,9 @@
     </header>
 
     <nav>
-        <a href="/index.html">Inicio</a>
+        <a href="index.html">Inicio</a>
         <a href="#">Eventos</a>
-        <a href="#">Calendario</a>
-        <a href="#">Contacto</a>
+        <a href="calendar.html">Calendario</a>
     </nav>
 
     <section>
@@ -42,6 +41,7 @@
         </p>
 
     </section>
+
 
     <footer>
         <p>&copy; 2024 Guía de Eventos Culturales de Medellín | Todos los derechos reservados</p>
