Ahora el calendario si puede cambiar entre meses, se mejora el aspecto estilistico

--- a/Proyecto_Final/Codigo/index.html
+++ b/Proyecto_Final/Codigo/index.html
@@ -22,24 +22,42 @@
         <a href="calendar.html">Calendario</a>
     </nav>
 
-    <section>
-        <h2>Bienvenidos a Medellín</h2>
-        <p>
-            Medellín, conocida como la "Ciudad de la Eterna Primavera" por su clima templado y agradable, 
-            es la segunda ciudad más grande de Colombia y la capital del departamento de Antioquia. 
-            A lo largo de los siglos, se transformó en un próspero centro industrial y económico, 
-            convirtiéndose en una de las ciudades más hermosas y dinámicas de toda América Latina.
-        </p>
 
-        <p>
-            Uno de los aspectos más destacados de Medellín es su riqueza cultural. La ciudad es un punto 
-            de encuentro para diversas expresiones artísticas y culturales, que reflejan la identidad paisa 
-            las costumbres antioqueñas están impregnadas de tradiciones rurales, pero Medellín ha sabido 
-            fusionar estas raíces con una mentalidad innovadora y moderna. Esto se manifiesta en la 
-            vibrante vida artística, los museos de la ciudad, su arquitectura contemporánea, y las 
-            expresiones culturales que llenan sus calles y plazas.
-        </p>
+    <section class="container">
 
+        <div class="info-box">
+            <h2>Bienvenidos a Medellín</h2>
+            <p>
+                Medellín, conocida como la "Ciudad de la Eterna Primavera" por su clima templado y agradable, 
+                es la segunda ciudad más grande de Colombia y la capital del departamento de Antioquia. 
+                A lo largo de los siglos, se transformó en un próspero centro industrial y económico, 
+                convirtiéndose en una de las ciudades más hermosas y dinámicas de toda América Latina.
+            </p>
+
+            <button class="btn">CONOCE MÁS</button>
+        </div>
+
+        <div class="img-box">
+            <img src="resources/palacio-cultura-medellin.jpg" alt="Vista de Medellín">
+        </div>
+        
+        <div class="img-box">
+            <img src="resources/palacio-cultura-medellin.jpg" alt="Cultura de Medellín">
+        </div>
+
+        <div class="info-box">
+            <h2>Cultura</h2>
+            <p>
+                Uno de los aspectos más destacados de Medellín es su riqueza cultural. La ciudad es un punto 
+                de encuentro para diversas expresiones artísticas y culturales, que reflejan la identidad paisa 
+                las costumbres antioqueñas están impregnadas de tradiciones rurales, pero Medellín ha sabido 
+                fusionar estas raíces con una mentalidad innovadora y moderna. Esto se manifiesta en la 
+                vibrante vida artística, los museos de la ciudad, su arquitectura contemporánea, y las 
+                expresiones culturales que llenan sus calles y plazas.
+            </p>
+            
+        <button class="btn">CONOCE MÁS</button>
+        </div>
     </section>
 
 
