Se organiza la estructura del codigo

--- a/Proyecto_Final/Codigo/index.html
+++ b/Proyecto_Final/Codigo/index.html
@@ -6,8 +6,8 @@
     <meta name="description" content="Proyecto final" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Guía Eventos de Medellín</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel = "icon" href= "resources/logoA.png"/>
+    <link rel="stylesheet" href="resources/styles.css">
+    <link rel = "icon" href= "resources/img/logoA.png"/>
 
 
 <body>
@@ -17,9 +17,9 @@
     </header>
 
     <nav>
-        <a href="index.html">Inicio</a>
+        <a href="/Codigo/index.html">Inicio</a>
         <a href="#">Eventos</a>
-        <a href="calendar.html">Calendario</a>
+        <a href="pages/calendar.html">Calendario</a>
     </nav>
 
 
@@ -38,11 +38,11 @@
         </div>
 
         <div class="img-box">
-            <img src="resources/palacio-cultura-medellin.jpg" alt="Vista de Medellín">
+            <img src="resources/img/palacio-cultura-medellin.jpg" alt="Vista de Medellín">
         </div>
         
         <div class="img-box">
-            <img src="resources/palacio-cultura-medellin.jpg" alt="Cultura de Medellín">
+            <img src="resources/img/palacio-cultura-medellin.jpg" alt="Cultura de Medellín">
         </div>
 
         <div class="info-box">
