--- a/Proyecto_Final/Codigo/pages/calendar.html
+++ b/Proyecto_Final/Codigo/pages/calendar.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guía de Eventos Culturales de Medellín</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/Codigo/resources/styles.css">
 </head>
 <body>
     <header>
@@ -13,9 +13,9 @@
     </header>
 
     <nav>
-        <a href="index.html">Inicio</a>
+        <a href="/Codigo/index.html">Inicio</a>
         <a href="#">Eventos</a>
-        <a href="calendar.html">Calendario</a>
+        <a href="pages/calendar.html">Calendario</a>
     </nav>
 
     <section>
@@ -46,6 +46,6 @@
         <p>&copy; 2024 Guía de Eventos Culturales de Medellín | Todos los derechos reservados</p>
     </footer>
 
-    <script src="calendar.js"></script>
+    <script src="/Codigo/resources/calendar.js"></script>
 </body>
 </html>
