Estructura del modulo de eventos

--- a/Proyecto_Final/Codigo/pages/calendar.html
+++ b/Proyecto_Final/Codigo/pages/calendar.html
@@ -14,7 +14,7 @@
 
     <nav>
         <a href="/Codigo/index.html">Inicio</a>
-        <a href="#">Eventos</a>
+        <a href="/Codigo/pages/events.html">Eventos</a>
         <a href="pages/calendar.html">Calendario</a>
     </nav>
 
