--- a/Proyecto_Final/Codigo/pages/events.html
+++ b/Proyecto_Final/Codigo/pages/events.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="author" content="Daniel Perez Gallego" />
-    <meta name="description" content="Proyecto final" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Guía Eventos de Medellín</title>
-    <link rel="stylesheet" href="resources/styles.css">
-    <link rel = "icon" href= "resources/img/logoA.png"/>
-
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Guía de Eventos Culturales de Medellín</title>
+    <link rel="stylesheet" href="/Codigo/resources/styles.css">
+</head>
 <body>
     <header>
         <h1>Guía de Eventos Culturales de Medellín</h1>
@@ -22,23 +18,20 @@
         <a href="pages/calendar.html">Calendario</a>
     </nav>
 
-
     <section class="container">
 
         <div class="info-box">
-            <h2>Bienvenidos a Medellín</h2>
+            <h2>Feria de las flores</h2>
             <p>
-                Medellín, conocida como la "Ciudad de la Eterna Primavera" por su clima templado y agradable, 
-                es la segunda ciudad más grande de Colombia y la capital del departamento de Antioquia. 
-                A lo largo de los siglos, se transformó en un próspero centro industrial y económico, 
-                convirtiéndose en una de las ciudades más hermosas y dinámicas de toda América Latina.
+                La Feria de las Flores es el evento más representativo de Medellín, celebrada cada agosto, 
+                llena de coloridos desfiles, música y tradición paisa.
             </p>
 
             <button class="btn">CONOCE MÁS</button>
         </div>
 
         <div class="img-box">
-            <img src="resources/img/palacio-cultura-medellin.jpg" alt="Vista de Medellín">
+            <img src="/Codigo/resources/img/feria_flores.jpeg" alt="Feria de las flores">
         </div>
         
         <div class="img-box">
@@ -63,12 +56,9 @@
 
     <footer>
         <p>&copy; 2024 Guía de Eventos Culturales de Medellín | Todos los derechos reservados</p>
-        <p>Desarrollado Por: <strong>Daniel Perez Gallego</strong> </p>
-        <p>Universidad De Antioquia</p>
-        <p>2024-2</p>
     </footer>
+
+    <script src="/Codigo/resources/events.js"></script>
+
 </body>
 </html>
-
-
-
