Se añaden eventos pre existentes de Medellín con su información

--- a/Proyecto_Final/Codigo/index.html
+++ b/Proyecto_Final/Codigo/index.html
@@ -19,7 +19,7 @@
     <nav>
         <a href="/Codigo/index.html">Inicio</a>
         <a href="/Codigo/pages/events.html">Eventos</a>
-        <a href="pages/calendar.html">Calendario</a>
+        <a href="/Codigo/pages/calendar.html">Calendario</a>
     </nav>
 
 
@@ -60,6 +60,49 @@
         </div>
     </section>
 
+
+    <section>
+        <h2>Todo lo que necesitas saber sobre Medellín</h2>
+        <p>
+            Medellín, la segunda ciudad más grande de Colombia, se ha convertido en uno de los destinos 
+            preferidos por viajeros nacionales e internacionales. Gracias a su clima, infraestructura y oferta 
+            cultural, Medellín destaca en América Latina como una ciudad moderna y en constante evolución. 
+            La revista TimeOut la nombró en 2023 como uno de los mejores lugares para visitar, ubicándola 
+            también entre los tres principales destinos para nómadas digitales, junto a Ciudad de México y 
+            Buenos Aires. Esta ciudad combina una vibrante vida urbana con un entorno amigable, perfecto 
+            para quienes buscan experiencias culturales y naturales.
+        </p>
+    </section>
+    
+    <section>
+        <h2>¿Dónde queda Medellín?</h2>
+        <p>
+            Ubicada en la región central de Colombia, en el departamento de Antioquia, Medellín se encuentra 
+            rodeada de paisajes montañosos y una biodiversidad que la convierte en un punto central para 
+            explorar la riqueza natural de Colombia. Antioquia es una región llena de contrastes geográficos, 
+            con valles, ríos, y montañas. Desde Medellín, es fácil hacer excursiones de un día a destinos 
+            turísticos como Guatapé, conocido por su pintoresco embalse y el famoso Peñón, o Santa Fe de 
+            Antioquia, una ciudad colonial rica en historia. Estos lugares están a solo un par de horas en 
+            auto, lo que hace de Medellín una base ideal para el turismo en la región.
+        </p>
+        
+    </section>
+
+
+    <section>
+        <h2>¿Cómo es Medellín?</h2>
+        <p>
+            Medellín es una ciudad rodeada de montañas y bañada en un clima primaveral durante todo el año. 
+            Su geografía y diseño urbano incluyen amplias zonas verdes, parques, y miradores naturales que 
+            invitan a disfrutar del aire libre. Además, su vida nocturna es dinámica, con una gran oferta de 
+            bares, restaurantes, discotecas y eventos culturales. Zonas como El Poblado y Laureles son famosas 
+            por su animado ambiente. Además de las actividades urbanas, hay muchas opciones de aventura y 
+            naturaleza en los alrededores. Los visitantes también encuentran en Medellín una calidez humana 
+            que distingue a los "paisas", haciendo que la estancia en la ciudad sea siempre acogedora y llena 
+            de buena energía.
+        </p>
+
+    </section>
 
     <footer>
         <p>&copy; 2024 Guía de Eventos Culturales de Medellín | Todos los derechos reservados</p>
