--- a/Proyecto_Final/Codigo/pages/calendar.html
+++ b/Proyecto_Final/Codigo/pages/calendar.html
@@ -15,7 +15,7 @@
     <nav>
         <a href="/Codigo/index.html">Inicio</a>
         <a href="/Codigo/pages/events.html">Eventos</a>
-        <a href="pages/calendar.html">Calendario</a>
+        <a href="/Codigo/pages/calendar.html">Calendario</a>
     </nav>
 
     <section>
