Se añaden las APIs de google maps segun la documentación de Google

--- a/Proyecto_Final/Codigo/pages/events.html
+++ b/Proyecto_Final/Codigo/pages/events.html
@@ -65,7 +65,7 @@
         </div>
 
         <div class="img-box">
-            <img src="/Codigo/resources/img/feria_flores.jpeg" alt="Feria de las flores">
+            <img src="/Codigo/resources/img/Colombiamoda.jpg" alt="Imagen Colombiamoda">
         </div>
         
         <div class="img-box">
