Avances con la API de Maps en la feria de la flores

--- a/Proyecto_Final/Codigo/pages/events.html
+++ b/Proyecto_Final/Codigo/pages/events.html
@@ -6,6 +6,7 @@
     <title>Guía de Eventos Culturales de Medellín</title>
     <link rel="stylesheet" href="/Codigo/resources/styles.css">
 </head>
+
 <body>
     <header>
         <h1>Guía de Eventos Culturales de Medellín</h1>
@@ -29,7 +30,7 @@
                 actividades culturales que muestran la riqueza de la tradición antioqueña.
             </p>
 
-            <button class="btn">CONOCE MÁS</button>
+            <button class="btn" onclick="window.open('/Codigo/pages/feria.html', '_blank')">CONOCE MÁS</button>
         </div>
 
         <div class="img-box">
